    - Removed Bob's Chemical furnaces. Recipes moved to Angel's Chemical furnaces
    - Metal mixing furnace recipes moved to Sintering oven or Blast furnace
    - Stone metal mixing furnaces are available at the start of the game
    - Bob's assembling machines mod setting Fluid burning furnaces defaults to false
  Bugfixes:
    - Fixed crash in tutorial when SCT was not enabled
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 23.12.2020
  Bugfixes:
    - Fixed crash on startup when PickerAtheneum was enabled
    - Default landfill type changed from base game Landfill to Sand
    - Fixed Basic circuit board tech icon issue with graphics reskin mods
    - Reverted merge of A Sea Block Config
  Changes:
    - Cleared fuel value from disabled fuels
    - Added compatibility for Transport Drones mod
    - Angel's Petrochemical Processing setting Enable converter valve and conversion recipes defaults to false
    - Tutoral techs reworked
    - Hydro plant and Clarifier removed from tutorial
    - Hydro plant and Clarifier recipes reverted to default
    - Brown algae processing moved later in the tech tree
    - Lithia salt and Sodium carbonate moved to brown algae processing
    - Bob's Tech setting Science Pack colors update default value set to false. Currently only applies if SCT is disabled
    - Startup techs ignore tech cost multiplier
    - Hid Electric mining drill and pumpjack
    - Hid Mining Productivity techs (unless Seablock Mining mod is enabled)
    - Added Slag Processing 1 as a prerequisite for Logistics (if Bob's logistics setting Transport belt overhaul is enabled)
    - Removed unnecessary prerequisites
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 16.12.2020
  Changes:
    - Factorio 1.1 update
    - Worms will only spawn if map setting Enemy Bases is enabled