@@ -10,6 +10,8 @@ Date: ???
     - Bob's assembling machines mod setting Fluid burning furnaces defaults to false
   Bugfixes:
     - Fixed crash in tutorial when SCT was not enabled
+    - Cellulose Pulp was not usable as intermediate when hand crafting
+    - Fixed Total raw tooltip for Basic circuit board
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.1
 Date: 23.12.2020
